Moved to split entrypoints, one for docker one for desktop
