# YStreamUtils/Core/Entities/UserScript.cs
@@ -1,4 +1,5 @@
 ﻿using System.ComponentModel.DataAnnotations;
+using YStreamUtils.Core.Events;
 using YStreamUtils.Core.Models;
 
 namespace YStreamUtils.Core.Entities;
